--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="IMG_20191207_101449.jpg" class="img-responsive" alt="Circus tent">
+                        <img src="https://www.google.com/search?q=image&tbm=isch&ved=2ahUKEwi7mqSu8LrxAhU4o2MGHVKuAhAQ2-cCegQIABAA&oq=image&gs_lcp=CgNpbWcQAzIECAAQQzIECAAQQzIFCAAQsQMyBAgAEEMyBQgAELEDMgUIABCxAzICCAAyBQgAELEDMgUIABCxAzIICAAQsQMQgwE6BAgjECc6BwgjEOoCECdQ2sQFWJWWBmDulwZoAXAAeASAAckBiAGODpIBBTAuOS4xmAEAoAEBqgELZ3dzLXdpei1pbWewAQjAAQE&sclient=img&ei=LQraYPvPD7jGjuMP0tyKgAE&bih=609&biw=1280#imgrc=L8xfQakH9a8tJM" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
